# capytaine

./: .appveyor.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CONTRIBUTING.md  Dockerfile  Justfile  Makefile  Nemoh.py  README.md  bodies.py  capytaine.py  capytaine.scm  code_of_conduct.md  editable_install_requirements.txt  example.py  examples  flap.py  meson.build  meson.options  mockup.py  noxfile.py  parallel_example.py  penmp  plot_flap.py  problems.py  pyproject.toml  run.py  run_pyinstaller.sh  setup.py  symmetric_matrix_shapes.py  test.py  test_Nemoh.py  test_bodies.py  test_hydrostatics.py  test_prony.py
.github/workflows/: build_docs.yml  build_wheels.yaml  build_windows.bat  build_with_alternative_compilers.yaml  docs.yml  test_alternative_compilers.yaml  test_new_commits.yaml  test_with_latest_dependencies.yaml  tests.yaml  windows_intel.yaml
Nemoh/: Green_1.f90  Green_2.f90  Makefile
NemohCore/: Build_matrices.f90  Green_1.f90  Green_2.f90  Makefile  Wavenumber.f90
benchmark/: Makefile  benchmark.py  benchmark_sym.py  buoy.py  compare_exponential_decompositions.ipynb  cylinder.py  plot_csv.py
capytaine/: Nemoh.py  Toeplitz_matrices.py  __about__.py  __init__.py  bodies.py  bodies_collection.py  cli.py  exporter.py  import_export.py  meshes_collection.py  problems.py  reference_bodies.py  results.py  symmetries.py  tools.py
capytaine/NemohCore/: Green_1.f90  Green_2.f90  Green_Rankine.f90  Green_wave.f90  Initialize_Green_2.f90  Initialize_Green_wave.f90  Makefile  constants.f90  old_Prony_decomposition.f90  precision.f90
capytaine/bem/: Nemoh.py  airy_waves.py  engines.py  green_functions.py  hierarchical_toeplitz_matrices.py  nemoh.py  problems_and_results.py  prony_decomposition.py  solver.py
capytaine/bodies/: __init__.py  bodies.py  dofs.py  misc_internalLid.py  rigid.py
capytaine/geometric_bodies/: __init__.py  cylinder.py  free_surface.py  rectangle.py  sphere.py
capytaine/green_functions/: __init__.py  abstract_green_function.py  delhommeau.py  hams.py  prony_decomposition.py
capytaine/io/: bemio.py  export_wamit.py  io_wamit.py  legacy.py  mesh_loaders.py  mesh_writers.py  meshio.py  mmio.py  wamit.py  xarray.py
capytaine/matrices/: __init__.py  block.py  block_matrices.py  block_toeplitz.py  block_toeplitz_matrices.py  builders.py  linear_solvers.py  low_rank.py  low_rank_blocks.py  solver.py
capytaine/mesh/: __init__.py  connectivity.py  faces_properties.py  geometry.py  mesh.py  mesh_clipper.py  mesh_properties.py  mesh_quality.py  meshes_collection.py  mmio.py  quality.py  surface_integrals.py  symmetries.py
capytaine/meshes/: __init__.py  clipper.py  collections.py  geometry.py  interface.py  meshes.py  misc_internalLid.py  plane_geometry.py  properties.py  quadratures.py  quality.py  surface_integrals.py  symmetric.py
capytaine/post_pro/: __init__.py  free_surface.py  free_surfaces.py  impedance.py  irf.py  kochin.py  rao.py
capytaine/tools/: Airy_wave.py  VTK_free_surface_animation.py  __init__.py  bemio.py  cache_decorator.py  (+16 more)
conda/: bld.bat  build.sh  conda_upload.sh  meta.yaml
docs/: Makefile  changelog.rst  changelog_before_2.rst  changelog_from_2_to_3.rst  citing.rst  conf.py  features.rst  index.rst  notes_about_beaking_changes_in_3.0.rst  older_changelog.rst
examples/: animate_diffraction_sphere.py  animate_diffraction_sphere_matplotlib.py  animate_diffraction_sphere_vtk.py  animate_free_surface.py  cylinder.py  flap.py  green_afac.py  plot_Green_function.py  plot_flap.py  plot_free_surface.py  plot_matrix.py  symmetric_buoy.py
f90/: Green_1.f90  Green_2.f90
libs/fakeblocks/: README.md  pyproject.toml
libs/fakeblocks/examples/: C6_axisymmetric_buoy.py  C7_h_matrices_with_preconditionner.py
libs/fakeblocks/src/fakeblocks/: __init__.py  bodies.py  engines.py  io.py
libs/fakeblocks/src/fakeblocks/matrices/: __init__.py  block.py  block_toeplitz.py  builders.py  linear_solvers.py
libs/fakeblocks/src/fakeblocks/meshes/: __init__.py  clipper.py  collections.py  geometry.py  mesh_like_protocol.py  mesh_loaders.py  meshes.py  meshio.py  properties.py  quadratures.py  quality.py  symmetric.py
libs/fakeblocks/src/fakeblocks/meshes/predefined/: __init__.py  cylinders.py  rectangles.py  spheres.py
libs/fakeblocks/src/fakeblocks/ui/vtk/: __init__.py  animation.py  body_viewer.py  helpers.py  mesh_viewer.py
libs/fakeblocks/test/: test_bodies.py  test_hierarchical_toeplitz_matrices.py  test_linear_solvers.py  test_matrices.py  test_meshes.py  test_meshes_clipping.py  test_meshes_collections_and_symmetries.py  test_meshes_geometry.py  test_meshes_interface.py  test_meshes_predefined.py  test_tool_lru_cache.py
my_examples/: test_export_wamit.py
paper/: paper.bib  paper.md
pytest/: bemio_class.pkl  test_BEM_problems.py  test_BEM_with_hierarchical_toeplitz_matrices.py  test_Green.py  test_Nemoh.py  test_NemohCore.py  test_airy_waves.py  test_analytical_solutions.py  test_bem_airy_waves.py  test_bem_directBIE_engines.py  test_bem_engines.py  test_bem_engines_basic_matric_engine.py  test_bem_engines_basic_matrix_engine.py  test_bem_engines_hierarchical_toeplitz_matrices.py  test_bem_fortran_core.py  test_bem_green_function_finite_depth.py  test_bem_green_function_fortran_core.py  test_bem_green_function_table_density.py  test_bem_green_functions.py  test_bem_green_functions_table_density.py  test_bem_hierarchical_toeplitz_matrices.py  test_bem_irregular_frequencies_removal.py  test_bem_linear_combination_of_dofs.py  test_bem_nemoh_settings.py  test_bem_no_free_surface.py  test_bem_potential_velocity_and_free_surface_elevation.py  test_bem_problems_and_results.py  test_bem_problems_checks.py  test_bem_solver.py  test_bem_velocity_reconstruction.py  test_bem_with_quadratures.py  test_bem_zero_and_infinite_freq.py  test_bodies.py  test_bodies_multibodies.py  test_bodies_predefined.py  test_clipping.py  test_consistency_with_HAMS.py  test_consistency_with_Nemoh_2.py  test_consistency_with_analytical_solutions.py  test_export_wamit.py  (+86 more)
wamit_exports/: test_export_wamit.py
(+440 files in other folders)
