[project]
name = "capytaine"
description = "Python BEM solver for linear potential flow, based on Nemoh"
authors = [{name = "Matthieu Ancellin", email = "matthieu.ancellin@eurobios.com"}]
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "pandas>=1.3", "xarray"]
urls = {repository = "https://github.com/capytaine/capytaine"}
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Fortran",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering",
]
scripts = {capytaine = "capytaine.ui.cli:main"}

dynamic = ['version']

[project.optional-dependencies]
build = ["numpy", "ninja", "meson-python", "charset-normalizer"]
test = ["pytest", "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip"]
docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]

[build-system]
build-backend = 'mesonpy'
requires = ["meson-python", "oldest-supported-numpy", "charset-normalizer"]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest {project}/pytest/"

[tool.ruff]
select = ["E", "F", "W", "NPY"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
