[project]
name = "capytaine"
description = "Python BEM solver for linear potential flow, based on Nemoh"
authors = [{name = "Matthieu Ancellin", email = "matthieu.ancellin@eurobios.com"}]
requires-python = ">=3.8"
dependencies = [
   "numpy>=1.20; python_version>='3.9'",
   "numpy>=1.24; python_version=='3.8'",  # https://github.com/capytaine/capytaine/issues/562
   "scipy",
   "pandas>=1.3",
   "xarray",
   "rich"
]
urls = {repository = "https://github.com/capytaine/capytaine"}
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Fortran",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering",
]
scripts = {capytaine = "capytaine.ui.cli:main"}

dynamic = ['version']

[project.optional-dependencies]
optional = [
  "matplotlib", "joblib>=1.3", "meshio",
  # "quadpy-gpl",
  # "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip"
]
test = ["pytest"]
docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]

[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "charset-normalizer",
    "numpy>=2.0.0; python_version>='3.9'",
    "numpy==1.24.4; python_version=='3.8'",
]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest {project}/pytest/"

[tool.ruff.lint]
select = ["E", "F", "W", "NPY"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
